fix jdk 25 deprecation