@@ -13,6 +13,7 @@
  *****************************************************************************/
 package org.idempiere.webservices.client;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
@@ -142,7 +143,7 @@ public class QueryDataLookup extends Lookup {
 			body.addDocument(document);
 			
 			// Invoke the service endpoint
-			URL endpoint = new URL(endPoint);
+			URL endpoint = new URI(endPoint).toURL();
 			
 			SOAPMessage responseMsg = null;
 			
